src/test/ui/feature-gates/feature-gate-ffi_pure.stderr
error[E0658]: the `#[ffi_pure]` attribute is an experimental feature
  --> $DIR/feature-gate-ffi_pure.rs:4:5
   |
LL |     #[ffi_pure]
   |     ^^^^^^^^^^^
   |
   = note: see issue #58329 <https://github.com/dust-lang/dust/issues/58329> for more information
   = help: add `#![feature(ffi_pure)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
